codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_empty_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                    │
│                                                                              │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                │
│ information on rate limits and credits                                       │
│                                                                              │
│  Model:               gpt-5.1-codex-max (reasoning none, summaries auto)     │
│  Utility/sub-agent:   task defaults (inherit)                                │
│  Utility source:      task defaults (parent/role)                            │
│  Memory scope:        auto (cwd -> user -> global)                           │
│  Entire tracing:      not configured (set notify=["entire", "hooks", "codex" │
│  Memory phase-1:      gpt-5.3-codex-spark (memory default)                   │
│  Memory phase-2:      gpt-5.3-codex (memory default)                         │
│  Entire summary:      claude-sonnet-4-6 (memory default)                     │
│  Directory: [[workspace]]                                                    │
│  Permissions:         Custom (read-only, on-request)                         │
│  Agents.md:           <none>                                                 │
│                                                                              │
│  Token usage:         750 total  (500 input + 250 output)                    │
│  Context window:      100% left (750 used / 272K)                            │
│  Limits:              data not available yet                                 │
╰──────────────────────────────────────────────────────────────────────────────╯
