codex-rs/tui/src/status/snapshots/codex_tui__status__tests__status_snapshot_shows_stale_limits_message.snap
---
source: tui/src/status/tests.rs
expression: sanitized
---
/status

╭──────────────────────────────────────────────────────────────────────────────╮
│  >_ OpenAI Codex (v0.0.0)                                                    │
│                                                                              │
│ Visit https://chatgpt.com/codex/settings/usage for up-to-date                │
│ information on rate limits and credits                                       │
│                                                                              │
│  Model:               gpt-5.1-codex-max (reasoning none, summaries auto)     │
│  Utility/sub-agent:   task defaults (inherit)                                │
│  Utility source:      task defaults (parent/role)                            │
│  Memory scope:        auto (cwd -> user -> global)                           │
│  Entire tracing:      not configured (set notify=["entire", "hooks", "codex" │
│  Memory phase-1:      gpt-5.1-codex-mini (memory default)                    │
│  Memory phase-2:      gpt-5.3-codex (memory default)                         │
│  Entire summary:      claude-sonnet-4-6 (memory default)                     │
│  Directory: [[workspace]]                                                    │
│  Permissions:         Custom (read-only, on-request)                         │
│  Agents.md:           <none>                                                 │
│                                                                              │
│  Token usage:         1.9K total  (1K input + 900 output)                    │
│  Context window:      100% left (2.25K used / 272K)                          │
│  5h limit:            [██████░░░░░░░░░░░░░░] 28% left (resets 03:14)         │
│  Weekly limit:        [████████████░░░░░░░░] 60% left (resets 03:34)         │
│  Warning:             limits may be stale - start new turn to refresh.       │
╰──────────────────────────────────────────────────────────────────────────────╯
